[tool.poetry]
name = "pytorch"
version = "0.1.0"
description = ""
authors = ["patree <treeshnapati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
pandas = "^1.5.0"
torch = "^1.12.1"
networkx = "^2.8.6"
matplotlib = "^3.6.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
